fix text bleeding off buttons in spanish translation

--- a/css/sbk.css
+++ b/css/sbk.css
@@ -11,15 +11,15 @@ li {
     margin-bottom: 1rem;
 }
 
-.btn {
+/* .btn {
     display: block;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     min-width: 25rem;
-    max-width: 45rem;
+    max-width: 43rem;
     width: auto;
-}
+} */
 
 .block-text-accent {
     background-color: #f2f2f3; 
@@ -68,6 +68,13 @@ a.button.language {
 
 a.button {
     font-size: 16px !important;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 25rem;
+    max-width: 43rem;
+    width: auto;
 }
 
 @media (max-width: 475px) {
@@ -80,8 +87,8 @@ a.button {
     .btn-spacer {
         display: none;
     }
-    a.button {
-        font-size: 14px !important;
+    a.button span.es-text {
+        font-size: 13px !important;
     }
 }
 @media (min-width: 475px) {
